# subfixer-caption-corrections

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: api.rs  diff.rs  error.rs  leaderboard.rs  lib.rs  main.rs  store.rs  videokey.rs
backend/tests/: app.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DiffView.test.tsx  DiffView.tsx
frontend/src/lib/: timestamp.test.ts  timestamp.ts  worddiff.test.ts  worddiff.ts
frontend/src/pages/: LeaderboardPage.tsx  SubmitPage.test.tsx  SubmitPage.tsx
