[package]
name = "subfixer"
version = "0.1.0"
edition = "2021"
description = "Backend API and caption diff store for SubFixer: crowd-sourced closed-caption corrections with a global fixer leaderboard."
license = "MIT"
authors = ["smolkai <smolkai@users.noreply.github.com>"]

[lib]
name = "subfixer"
path = "src/lib.rs"

[[bin]]
name = "subfixer-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "normalize-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2"

[dev-dependencies]
http-body-util = "0.1"
